--- a/lang/wp-birthday-users.pot
+++ b/lang/wp-birthday-users.pot
@@ -1,9 +1,9 @@
-# Copyright (C) 2012 
+opyright (C) 2012 
 # This file is distributed under the same license as the  package.
 msgid ""
 msgstr ""
 "Project-Id-Version:  \n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-birthday-users\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/extend/plugins/wp-birthday-users\n"
 "POT-Creation-Date: 2012-06-01 14:43:47+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,6 +22,10 @@ msgstr ""
 
 #: wp-birthday-users.php:94
 msgid "Birthdays"
+msgstr ""
+
+#: wp-birthday-users.php:96
+msgid "%1$s</em> of the %2$s registered user filled in there birthday."
 msgstr ""
 
 #: wp-birthday-users.php:97
@@ -63,3 +67,8 @@ msgstr ""
 #: wp-birthday-users.php:188
 msgid "Share age info"
 msgstr ""
+
+#: wp-birthday-users.php:190
+msgid "Show your age: %d y, and this only if you share your anniversary info."
+msgstr ""
+
